[gd_scene load_steps=34 format=3 uid="uid://2cdvfll76brj"]

[ext_resource type="Texture2D" uid="uid://wm3r3t7vp0k5" path="res://assetz/asset-01.png" id="1_7gjft"]
[ext_resource type="Script" path="res://scripts/main_controller.gd" id="1_15yxh"]
[ext_resource type="Texture2D" uid="uid://dhm6fkfasxepg" path="res://assetz/asset-02.png" id="2_1h28l"]
[ext_resource type="Script" path="res://scripts/MainBar.gd" id="2_7qbd6"]
[ext_resource type="Script" path="res://scripts/diffLvls.gd" id="2_gqioy"]
[ext_resource type="Resource" uid="uid://dd2tm6xounlax" path="res://levelResources/level1.tres" id="2_wlohm"]
[ext_resource type="Resource" uid="uid://463sib4iq7k" path="res://levelResources/level2.tres" id="3_gbtvu"]
[ext_resource type="Resource" uid="uid://v05dtm4xx35l" path="res://levelResources/level3.tres" id="5_gj2r1"]
[ext_resource type="Texture2D" uid="uid://dfxowqto0iuo0" path="res://assetz/progress.png" id="5_lmk58"]
[ext_resource type="Texture2D" uid="uid://be5fu0th3nrbc" path="res://assetz/ramp.svg" id="7_fw3il"]
[ext_resource type="Script" path="res://scripts/test_shake.gd" id="7_w8mht"]
[ext_resource type="Texture2D" uid="uid://5h3ix4aaepq5" path="res://assetz/base.svg" id="8_r5sa7"]
[ext_resource type="Texture2D" uid="uid://bs5kvwrqx1vlk" path="res://assetz/press.svg" id="9_8pwr2"]
[ext_resource type="Texture2D" uid="uid://ceg51nv58ncsy" path="res://assetz/hand.svg" id="10_05sdp"]
[ext_resource type="Texture2D" uid="uid://ckd0naak8br5d" path="res://assetz/bar-06.svg" id="11_ac7ld"]
[ext_resource type="AudioStream" uid="uid://c1gjwa5so28bv" path="res://assetz/sound/hydraulic_press_going.mp3" id="15_lvo0i"]
[ext_resource type="AudioStream" uid="uid://bawanakkskto0" path="res://assetz/sound/press_winddown.mp3" id="16_6xsup"]
[ext_resource type="AudioStream" uid="uid://bn3fl2fk476p" path="res://assetz/sound/press_up.mp3" id="17_cx8ao"]
[ext_resource type="AudioStream" uid="uid://dkssgu1mbe2hy" path="res://assetz/sound/hand_move.mp3" id="18_6ffim"]
[ext_resource type="AudioStream" uid="uid://ca2xg2csx5oay" path="res://assetz/sound/squishes.mp3" id="19_bcke2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8gm2"]
size = Vector2(50.4, 141.12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vtyou"]
size = Vector2(1577.93, 218.47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ud5il"]
size = Vector2(617, 244)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_neqfx"]

[sub_resource type="Animation" id="Animation_f8h8m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("press-hold:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -609)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(190, 684)]
}

[sub_resource type="Animation" id="Animation_rn1x7"]
resource_name = "hydraulic-press"
length = 5.555
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("press-hold:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5.555),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -609), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_0yabt"]
resource_name = "move-hand"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(190, 684), Vector2(517, 684)]
}

[sub_resource type="Animation" id="Animation_itile"]
resource_name = "move-hand-back"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(517, 684), Vector2(190, 684)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m4l4a"]
_data = {
"RESET": SubResource("Animation_f8h8m"),
"hydraulic-press": SubResource("Animation_rn1x7"),
"move-hand": SubResource("Animation_0yabt"),
"move-hand-back": SubResource("Animation_itile")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1t823"]
size = Vector2(608, 76)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cv8ko"]
size = Vector2(606, 140)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_6dn0u"]
distance = 6.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k2k8i"]
size = Vector2(600, 85)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_15yxh")
diffLvls = Array[ExtResource("2_gqioy")]([ExtResource("2_wlohm"), ExtResource("3_gbtvu"), ExtResource("5_gj2r1")])

[node name="ColorRect" type="ColorRect" parent="."]
z_as_relative = false
offset_left = -1.0
offset_top = 1.0
offset_right = 7999.0
offset_bottom = 1081.0
scale = Vector2(0.24, 1)
color = Color(0.473976, 0.473976, 0.473976, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = 1
z_as_relative = false
offset_right = 1920.0
offset_bottom = 1080.0
scale = Vector2(0.24, 1)
color = Color(0.654232, 0.654232, 0.654232, 1)

[node name="MainBar" type="Sprite2D" parent="."]
z_index = 2
z_as_relative = false
texture_filter = 1
position = Vector2(140.5, 540.5)
texture = ExtResource("1_7gjft")
script = ExtResource("2_7qbd6")

[node name="ZeroAnchor" type="Node2D" parent="MainBar"]
position = Vector2(0, 426)
rotation = 3.14159

[node name="PlayerBar" type="Sprite2D" parent="MainBar/ZeroAnchor"]
z_index = 1
z_as_relative = false
texture_filter = 2
texture = ExtResource("2_1h28l")

[node name="Area2D" type="Area2D" parent="MainBar/ZeroAnchor/PlayerBar"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainBar/ZeroAnchor/PlayerBar/Area2D"]
visible = false
position = Vector2(4.57764e-05, 0)
shape = SubResource("RectangleShape2D_e8gm2")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
z_index = 1
texture_filter = 1
offset_left = 189.5
offset_top = 36.5
offset_right = 252.5
offset_bottom = 1045.5
max_value = 1000.0
fill_mode = 3
texture_over = ExtResource("1_7gjft")
texture_progress = ExtResource("5_lmk58")
texture_progress_offset = Vector2(6, 4)

[node name="Ramp" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(1643, 673)
texture = ExtResource("7_fw3il")

[node name="StaticBody2D" type="StaticBody2D" parent="Ramp"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ramp/StaticBody2D"]
position = Vector2(496.392, -93.336)
rotation = -0.403536
shape = SubResource("RectangleShape2D_vtyou")

[node name="Base" type="Sprite2D" parent="."]
position = Vector2(1069, 980)
texture = ExtResource("8_r5sa7")

[node name="StaticBody2D" type="StaticBody2D" parent="Base"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base/StaticBody2D"]
position = Vector2(-1.5, -4)
shape = SubResource("RectangleShape2D_ud5il")

[node name="Hand" type="Sprite2D" parent="."]
position = Vector2(190, 684)
texture = ExtResource("10_05sdp")

[node name="Bar" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(413, 550)
texture = ExtResource("11_ac7ld")

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2(757, 797)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_neqfx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m4l4a")
}

[node name="press-hold" type="Node2D" parent="."]
position = Vector2(0, -609)

[node name="Press" type="Sprite2D" parent="press-hold"]
position = Vector2(1064, 375)
texture = ExtResource("9_8pwr2")
script = ExtResource("7_w8mht")

[node name="Area2D" type="Area2D" parent="press-hold/Press"]
position = Vector2(0, 418)

[node name="CollisionShape2D" type="CollisionShape2D" parent="press-hold/Press/Area2D"]
position = Vector2(-1, 28)
shape = SubResource("RectangleShape2D_1t823")

[node name="StaticBody2D" type="StaticBody2D" parent="press-hold"]
position = Vector2(1064, 793)

[node name="CollisionShape2D" type="CollisionShape2D" parent="press-hold/StaticBody2D"]
position = Vector2(-2, -5)
shape = SubResource("RectangleShape2D_cv8ko")

[node name="RightWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(1383, 873)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_6dn0u")
disabled = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1060, 772)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, 32.5)
shape = SubResource("RectangleShape2D_k2k8i")

[node name="Spawner" type="Node2D" parent="."]
position = Vector2(2515, 9)

[node name="press_go" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_lvo0i")
volume_db = 24.0

[node name="press_stop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_6xsup")
volume_db = 24.0

[node name="press_up" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_cx8ao")
volume_db = 24.0

[node name="hand_move" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_6ffim")
volume_db = 9.946

[node name="squish" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_bcke2")
volume_db = 16.505

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 685.0
offset_top = 415.0
offset_right = 1432.0
offset_bottom = 628.0
theme_override_font_sizes/font_size = 50
text = "You've crushed 'em all!
Care to crush some more!?
(You gotta press the space bar)"
horizontal_alignment = 1
